tests/baselines/reference/widenToAny1.errors.txt
widenToAny1.ts(4,5): error TS2322: Type 'string' is not assignable to type 'number'.


==== widenToAny1.ts (1 errors) ====
    function foo1<T>(f1: { x: T; y: T }): T {
        return undefined;
    }
    var z1: number = foo1({ x: undefined, y: "def" });  // Best common type is any
        ~~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    